# NextCreator

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: dalle.rs  lib.rs  llm.rs
src/components/: FlowCanvas.tsx  Sidebar.tsx  Toolbar.tsx  TreeWorkspace.tsx
src/components/nodes/: BatchImageGeneratorNode.tsx  DalleGeneratorNode.tsx  DoubaoGeneratorNode.tsx  FluxGeneratorNode.tsx  GptImageGeneratorNode.tsx  ImageGeneratorNode.tsx  ImageInputNode.tsx  KlingGeneratorNode.tsx  LLMContentNode.tsx  OpenAIImageGeneratorNode.tsx  QwenImageGeneratorNode.tsx  VeoGeneratorNode.tsx  VideoGeneratorNode.tsx  ZImageGeneratorNode.tsx  index.ts
src/components/panels/: BatchTaskPanel.tsx  ProviderPanel.tsx  SettingsPanel.tsx  index.ts
src/components/tree/: TreeChatFlow.tsx  types.ts
src/components/ui/: ImagePreviewModal.tsx  MaskEditorModal.tsx  ModelSelector.tsx  PromptEditModal.tsx  PromptPreviewModal.tsx  Select.tsx
src/config/: builtinProviders.ts  nodeConfig.ts  promptConfig.ts
src/config/prompts/: avatars.ts  creative3d.ts  creativeChinese.ts  (+10 more)
src/hooks/: useNodeConnectionStatus.ts
src/services/: batchTaskManager.ts  imageService.ts  llmService.ts  nodeExecutor.ts  providerResolution.ts  taskManager.ts  updateService.ts
src/stores/: batchTaskStore.ts  canvasStore.ts  flowStore.ts  settingsStore.ts  treeModelStore.ts  treeSessionStore.ts
src/types/: index.ts  tree.ts  workflow.ts
src/utils/: connectionValidator.ts  tauriStorage.ts
(+16 files in other folders)
