[package]
name = "nextcreator"
version = "0.2.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nextcreator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "=2.9.1", features = ["protocol-asset"] }
tauri-plugin-opener = "=2.5.2"
tauri-plugin-dialog = "=2.4.2"
tauri-plugin-fs = "=2.4.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
image = "0.25"
tauri-plugin-store = "=2.4.1"

# 文字去除功能（本地化）
lazy_static = "1.5"          # 全局静态变量
